<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meso_control_pkg</name>
  <version>0.1.0</version>
  <description>Controlsoftware for a mesocosm tank-pair.</description>
  <maintainer email="martin.petri@awi.de">parallels</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>osbk_devices</exec_depend>
  <exec_depend>osbk_operation</exec_depend>
  <exec_depend>osbk_interfaces</exec_depend>
  <exec_depend>meso_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>