<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osbk_devices</name>
  <version>0.1.0</version>
  <description>Provides basic nodes for sensors, actuators and interface-devices that can be inherited in order to implement nodes for specific hardware.</description>
  <maintainer email="t.galdiga@uni-bremen.de">Tim Galdiga</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>osbk_interfaces</depend>
  <depend>python3-requests</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
