<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osbk_examples</name>
  <version>0.1.0</version>
  <description>Examples for learning and testing the osbk-library.</description>
  <maintainer email="t.galdiga@uni-bremen.de">Tim Galdiga</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>osbk_operation</depend>
  <depend>osbk_devices</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
